--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1927,3 +1927,25 @@
   year={2022},
   volume={12}
 }
+
+
+@article{oja_bibliography_2002,
+	title = {Bibliography of {Self}-{Organizing} {Map} ({SOM}) {Papers}: 1998-2001 {Addendum}},
+  date = {2002},
+	language = {en},
+	author = {Oja, Merja and Kaski, Samuel and Kohonen, Teuvo},
+	pages = {156},
+	file = {Oja et al. - Bibliography of Self-Organizing Map (SOM) Papers .pdf:/home/noemie/Zotero/storage/NERWXIE3/Oja et al. - Bibliography of Self-Organizing Map (SOM) Papers .pdf:application/pdf},
+}
+
+@inproceedings{Kaski1998BibliographyOS,
+  title={Bibliography of Self-Organizing Map (SOM) Papers: 1981-1997},
+  author={Samuel Kaski and Jari Kangas and Teuvo Kohonen},
+  year={1998}
+}
+
+@inproceedings{Honkela2009BIBLIOGRAPHYOS,
+  title={BIBLIOGRAPHY OF SELF-ORGANIZING MAP (SOM) PAPERS: 2002-2005 ADDENDUM},
+  author={Timo Honkela and Teuvo Kohonen},
+  year={2009}
+}
