--- a/titlepage.tex
+++ b/titlepage.tex
@@ -11,8 +11,8 @@
 \\}
 \Examinateurs = {
     Lydia Boudjeloud-Assala & Maîtresse de conférence, Université de Lorraine, LORIA \\
-    Mathias Quoy & Professeur, CY-Université Cergy\\
+    Mathias Quoy & Professeur, CY-Université Cergy, Ensea, ETIS\\
 }
-\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupelec, LORIA}
+\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupelec Metz, LORIA}
 \CoDirecteur = {Yann Boniface & Maître de conférence, Université de Lorraine, LORIA}
 \MakeThesisTitlePage
