--- a/main.tex
+++ b/main.tex
@@ -73,14 +73,15 @@
   Dans cette démarche exploratoire, cette thèse propose d'étudier la mise en relation de cartes auto-organisatrices en architectures modulaires non-hiérarchiques, c'est-à-dire présentant des rétroactions entre les modules.
   Les cartes auto-organisatrices sont un algorithme d'apprentissage non-supervisé permettant de représenter de façon ordonnée un espace d'entrée en faible dimension, et qui s'inspire de l'organisation présente dans les aires corticales. 
   Par la simplicité de leurs règles de mise à jour et leur capacité de générer une représentation positionnelle d'une entrée, elles nous apparaissent comme des candidates naturelles à la conception d'une architecture modulaire.
-  Nous développons et étudions dans ces travaux un modèle modifié de cartes auto-organisatrices ainsi qu'une méthode d'interface entre carte permettant de les associer au sein d'une architecture non-hiérarchique. Nous appelons ce modèle CxSOM, pour \emph{Consensus Driven Multi-SOM}.
-  La thèse constitue ensuite une analyse expérimentale des mécanismes d'organisation et d'apprentissage émergeant de l'association des modules. Nous nous concentrons sur la mise en évidence de mécanismes de mémoire associative entre modalités~; l'objectif est de pouvoir apprendre une représentation de plusieurs espaces d'entrées au sein de l'architecture, ainsi que des relations existant entre ces entrées.
+  Nous développons et étudions dans ces travaux un modèle modifié de cartes auto-organisatrices permettant de les associer au sein d'une architecture non-hiérarchique. Nous appelons ce modèle CxSOM, pour \emph{Consensus Driven Multi-SOM}.
+  La thèse constitue ensuite une analyse expérimentale des mécanismes d'organisation et d'apprentissage émergeant de l'association des modules. Nous nous concentrons sur la mise en évidence de mécanismes de mémoire associative entre modalités~; l'objectif est de pouvoir apprendre une représentation de plusieurs espaces d'entrées au sein de l'architecture et d'extraire des relations existant entre ces entrées.
   Pour analyser ces mécanismes, nous mettons l'accent sur une méthode de représentation des réponses de l'architecture, et proposons des outils de visualisation et de mesure de l'apprentissage. Grâce à ce cadre expérimental, nous avons pu mettre en lumière des comportements d'apprentissage associatifs spécifiques au modèle d'architecture et des perspectives d'étude possibles.
+  En particulier, le modèle présente un comportement de prédiction d'entrée rendu possible par les rétroactions et l'apprentissage associatif des entrées au sein de l'architecture.
   La proposition du modèle CxSOM et l'analyse des comportements sur des architectures simples nous permet d'élaborer une base de travail, vers la conception d'architectures non-hiérarchiques comportant de nombreuses cartes.
 
   \KeyWords{Cartes auto-organisatrices, architecture modulaire, mécanismes d'apprentissage}
   \end{FrenchAbstract}
-  \pagebreak
+
   \begin{EnglishAbstract}
     The cerebral cortex appears in many models as an architecture of autonomous modules connected retroactively, interacting around sensory and higher-level information and implementing extremely sophisticated learning tasks. 
     This bio-inspired concept of a modular architecture has also a computational interest in the search for new learning paradigms, especially for the design of autonomous learning networks that evolve over time. They are indeed complex systems, which can conduct to the emergence of learning mechanisms due to the interaction between the modules.
